force-app/main/default/objects/Tag__c/fields/Box_Label__c.field-meta.xml
<CustomField>
    <fullName>Box_Label__c</fullName>
    <label>Box Label</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>