force-app/main/default/objects/Tag__c/fields/Misc_Tagging_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Misc_Tagging_Instructions__c</fullName>
    <label>Misc. Tagging Instructions</label>
    <type>TextArea</type>
</CustomField>