force-app/main/default/objects/Tag__c/fields/Quantity_04__c.field-meta.xml
<CustomField>
    <fullName>Quantity_04__c</fullName>
    <label>Quantity 04</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>