force-app/main/default/objects/Tag__c/fields/Quantity_05__c.field-meta.xml
<CustomField>
    <fullName>Quantity_05__c</fullName>
    <label>Quantity 05</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>