force-app/main/default/objects/Tag__c/fields/Quote_Line_Brand__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Brand__c</fullName>
    <description>Brand from the related Quote Line</description>
    <formula>Quote_Line__r.Brand__c</formula>
    <label>Quote Line Brand</label>
    <type>Text</type>
</CustomField>