force-app/main/default/objects/Tag__c/fields/Tag_Number_02__c.field-meta.xml
<CustomField>
    <fullName>Tag_Number_02__c</fullName>
    <label>Tag Number 02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>