force-app/main/default/objects/Tag__c/fields/Tag_Value_PDF__c.field-meta.xml
<CustomField>
    <fullName>Tag_Value_PDF__c</fullName>
    <label>Tag Value PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>