force-app/main/default/objects/Tag__c/fields/Tag_Value_to_IFS__c.field-meta.xml
<CustomField>
    <fullName>Tag_Value_to_IFS__c</fullName>
    <label>Tag Value to IFS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>