force-app/main/default/objects/Tag__c/recordTypes/Tag_All.recordType-meta.xml
<RecordType>
    <fullName>Tag_All</fullName>
    <active>true</active>
    <label>Tag All (CDC/LaMOT Only)</label>
</RecordType>