force-app/main/default/objects/Tag__c/recordTypes/Tag_Each.recordType-meta.xml
<RecordType>
    <fullName>Tag_Each</fullName>
    <active>true</active>
    <label>Tag Each (CDC/LaMOT Only)</label>
</RecordType>