force-app/main/default/objects/Tag__c/recordTypes/Tag_Individually.recordType-meta.xml
<RecordType>
    <fullName>Tag_Individually</fullName>
    <active>true</active>
    <label>Tag Individually</label>
</RecordType>