force-app/main/default/objects/Tag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tag_Number_01__c</columns>
    <columns>Quantity_01__c</columns>
    <columns>Tag_Number_02__c</columns>
    <columns>Quantity_02__c</columns>
    <columns>Tag_Value_PDF__c</columns>
    <columns>Tag_Value_to_IFS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tag_Value_PDF__c</field>
        <operation>contains</operation>
        <value>&amp;</value>
    </filters>
    <label>All</label>
</ListView>